# a2asalescatalog

./: .gitignore  LICENSE  README.md  pyproject.toml  test_live_skills.py
docs/: SPEC.md
examples/: consumer_agent.py
schemas/: LICENSE  agent-card.json  categories-request.json  compare-request.json  lookup-request.json  search-request.json  search-response.json
src/: __init__.py
src/client/: catalog_client.py
src/common/: axon.py  models.py
src/server/: ads.py  affiliates.py  agent_tracker.py  app.py  attribution.py  audience.py  business_skills.py  directory_skills.py  embeddings.py  federation.py  jobs_skills.py  negotiation.py  promotions.py  purchase.py  retargeting.py  rtb.py  services_skills.py  skills.py  store.py  subscriptions.py  vendor_analytics.py  video_skills.py
tests/: test_server.py
