[project]
name = "a2a-sales-catalog"
version = "0.1.0"
description = "Agent-to-agent marketplace for product and service discovery over the A2A protocol"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
